@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - plus some useful deps, and SpamAssassin is back
 
 0.006     2016-04-23
         - drop some too heavy deps from the default list
